[package]
name = "sampi"
version = "0.2.7"
authors = ["Matt"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/matthewrobertbell/sampi"
description = "Sampi is a serialization format, for 0 - 900 bytes of data, with a digital signature, timestamp and optional Proof of Work"

[features]
wasm = ["rand/wasm-bindgen", "js-sys"]

[dependencies]
ed25519-dalek = "1.0.0-pre.4"
base32 = "0.4.0"
base64 = "0.9.3"
rand = "0.7"
rand_core = "0.5.1"
sha2 = "0.8.0"
serde = "1.0"
serde-big-array = "0.1.5"
serde_derive = "1.0"
bincode = "1.3.1"
num_cpus = "1.0"
structopt = "0.3.0"
hex = "0.3.2"
rust-base58 = "0.0.4"
dirs = "2.0.2"
glob = "0.3.0"
strum = "0.17.1"
strum_macros = "0.17.1"
qrcodegen = "1.6.0"
js-sys = { version = "0.3.27", optional = true }

[profile.release]
lto = true